[tool.poetry]
name = "testpaymentgateway-new"
version = "0.1.0"
description = ""
authors = ["Madison <artisanal925@hotmail.com>"]
readme = "README.md"
packages = [{include = "testpaymentgateway_new"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
selenium = "^4.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
